# armazem

./: Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  clippy.toml  flake.nix  rust-toolchain.toml
.github/workflows/: auto-release.yml
src/: config.rs  gateway.rs  health.rs  main.rs
